kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  replicas: 1 # Number of replicas (Pods) you want to run
  selector:
    matchLabels:
      app: vprodb # Label selector to identify the Pods managed by this Deployment
  template:
    metadata:
      labels:
        app: vprodb # Labels for the Pods, used by the Deployment to manage them
    spec:
      containers:
        - name: vprodb
          image: vprocontainers/vprofiledb # The Docker image to use for the container
          volumeMounts:
            - name: vprodb-db-data
              mountPath: /var/lib/mysql
          ports:
            - name: vprodb-port
              containerPort: 3306
      volumes:
        - name: vprodb-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
