kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
spec:
  selector:
    app: vprodb # This must match the labels in the Deployment
  ports:
    - protocol: TCP
      port: 3306 # The port the service exposes (MySQL default port)
      targetPort: vprodb-port # The port on the container that the service forwards to
  type: ClusterIP
