kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
spec:
  selector:
    app: vpromc # This must match the labels in the Deployment
  ports:
    - protocol: TCP
      port: 11211 # The port the service exposes (MySQL default port)
      targetPort: vpromc-port # The port on the container that the service forwards to
  type: ClusterIP
